// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Component should render correctly 1`] = `
<div>
  <hr />
  <h3>
    a section
  </h3>
  <Grid>
    <Left>
      left
    </Left>
    <Right>
      right
    </Right>
  </Grid>
</div>
`;

exports[`Section Component should render correctly 2`] = `
<OGOnlyWrapper
  as={[Function]}
  lg={5}
  xs={12}
>
  <Box
    as={[Function]}
    lg={3}
    xs={12}
  >
    <div>
      left
    </div>
  </Box>
</OGOnlyWrapper>
`;

exports[`Section Component should render correctly 3`] = `
<OGOnlyWrapper
  as={[Function]}
  lg={7}
  xs={12}
>
  <Box
    as={[Function]}
    lg={9}
    xs={12}
  >
    <div
      className="Right"
    >
      right
    </div>
  </Box>
</OGOnlyWrapper>
`;
